--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,21 @@
-apply plugin: "com.android.library"
+apply plugin: 'com.android.library'
+
+def DEFAULT_TARGET_SDK_VERSION              = 27
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
-
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion project.hasProperty('targetSdkVersion') ? project.targetSdkVersion : DEFAULT_TARGET_SDK_VERSION
         versionCode 1
         versionName "1.0"
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    implementation 'com.facebook.react:react-native:+'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.facebook.react:react-native:+'
 }
